--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    font-family: sans-serif;
+    background-color: white;
+}
+.conatiner{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.common-form{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: auto;
+}
+.form-input{
+ height:35px;
+ margin-bottom: 20px;
+ border: 2px solid blueviolet;
+ padding-left: 20px;
+ color: blueviolet;
+}
+.form-button{
+height: 35px;
+border: 2px solid blueviolet;
+color: blueviolet;
+cursor: pointer;
+}
+.message-p{
+  color: red;
+}
+
+
+.carousel-caption {
+  position: absolute;
+  right: 15%;
+  bottom: 1.25rem;
+  left: 15%;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  color: #fff;
+  text-align: center;
+  background-color: rgba(60, 55, 55, 0.338);
+  border-radius: 5%;
+}
